--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-portfolio-app",
   "version": "1.0.0",
-  "description": "Responsive Portfolio Website",
+  "description": "Responsive Portfolio Website Created",
   "main": "index.js",
   "homepage": "https://github.com/tnisula/my_portfolio",
   "scripts": {
